<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTask">

    <TextView
        android:id="@+id/createtasknamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/namelabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createtasknamevalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/createtaskactivity_nameplaceholder"
        android:inputType="textPersonName"
        android:textSize="@dimen/label_font"
        app:layout_constraintBottom_toBottomOf="@+id/createtasknamelabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createtasknamelabel"
        app:layout_constraintTop_toTopOf="@+id/createtasknamelabel" />

    <TextView
        android:id="@+id/createtaskdatelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/datelabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/createtasknamelabel"
        app:layout_constraintTop_toBottomOf="@+id/createtasknamevalue" />

    <Button
        android:id="@+id/createtasksetdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createtaskactivity_setdatebutton"
        app:layout_constraintBottom_toBottomOf="@+id/createtaskdatelabel"
        app:layout_constraintEnd_toEndOf="@+id/createtasknamevalue"
        app:layout_constraintTop_toTopOf="@+id/createtaskdatelabel" />

    <TextView
        android:id="@+id/createtaskprioritylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prioritylabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/createtaskdatelabel"
        app:layout_constraintTop_toBottomOf="@+id/createtaskdatelabel" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/createtaskprioritylabel"
        app:layout_constraintTop_toBottomOf="@+id/createtaskprioritylabel">

        <RadioButton
            android:id="@+id/createtaskpriorityhigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createtaskactivity_priorityhigh" />

        <RadioButton
            android:id="@+id/createtaskprioritymedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createtaskactivity_prioritymedium" />

        <RadioButton
            android:id="@+id/createtaskprioritylow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createtaskactivity_prioritylow" />
    </RadioGroup>

    <Button
        android:id="@+id/createtaskcancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancelbutton"
        app:layout_constraintStart_toStartOf="@+id/createtaskprioritylabel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/createtasksubmitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitbutton"
        app:layout_constraintBottom_toBottomOf="@+id/createtaskcancelbutton"
        app:layout_constraintEnd_toEndOf="@+id/createtasksetdate"
        app:layout_constraintTop_toTopOf="@+id/createtaskcancelbutton" />

    <TextView
        android:id="@+id/createtaskdatevalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/createtaskdatelabel"
        app:layout_constraintStart_toStartOf="@+id/createtasknamevalue"
        app:layout_constraintTop_toTopOf="@+id/createtaskdatelabel" />
</androidx.constraintlayout.widget.ConstraintLayout>