<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivityheading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/mainactivity_heading"
        android:textSize="@dimen/headings_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mainactivity_viewtask"
        app:layout_constraintEnd_toEndOf="@+id/mainActivityheading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mainActivityheading"
        app:layout_constraintTop_toBottomOf="@+id/upcomingFragment" />

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_createtask"
        app:layout_constraintEnd_toEndOf="@+id/viewTasksButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/viewTasksButton"
        app:layout_constraintTop_toBottomOf="@+id/viewTasksButton" />

    <fragment
        android:id="@+id/upcomingFragment"
        android:name="com.todo.hw02.UpComingTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/mainActivityheading"
        app:layout_constraintStart_toStartOf="@+id/mainActivityheading"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityheading" />

    <!--    <TextView-->
<!--        android:id="@+id/mainactivityupcomingtask"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:text="val"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/textView"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textView"-->
<!--        android:background="@drawable/rectangularbox"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->


</androidx.constraintlayout.widget.ConstraintLayout>